Add server Docker image build and QNAP Container Station deployment
server/Dockerfile builds the dedicated server as a multi-stage image
(maven:3.9-eclipse-temurin-25 -> eclipse-temurin:25-jre, not -alpine since
libGDX's native libs need glibc). release-server.yml pushes it to GHCR on
every v* tag push, mirroring the client release workflow but on a Linux
runner. deploy/docker-compose.yml is the Container Station "Application"
YAML: pinned image tag, published TCP/UDP ports, bind-mounted account
data so it survives redeploys.

Built and run locally via Podman to confirm the image actually starts and
listens correctly - not yet deployed to the real NAS.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_016sWaPLQ2V8kvMjaJF5BM9A